crates/ladder_types/tests/ui/generated/should_fail/test__kiss_ladder__R3_plus_R2.stderr
error[E0308]: mismatched types
 --> tests/ui/generated/should_fail/test__kiss_ladder__R3_plus_R2.rs:5:24
  |
5 |    let _ = R3::new() + R2::new();
  |                        ^^^^^^^^^ expected `4`, found `2`
  |
  = note: expected struct `Relative<4>`
             found struct `Relative<2>`
